--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mtucourses/rate-my-professors",
+  "name": "@chromeskullex/rate-my-professors",
   "keywords": [
     "🧑‍🏫",
     "ratemyprofessors",
@@ -9,12 +9,12 @@
     "graphql",
     "rate"
   ],
-  "version": "2.2.0",
-  "description": "a basic wrapper for Rate My Professors's GraphQL API",
+  "version": "2.2.1",
+  "description": "a basic wrapper for Rate My Professors's GraphQL API with reviews",
   "main": "dist/src/index.js",
   "types": "dts/src/index.d.ts",
-  "repository": "git@github.com:Michigan-Tech-Courses/rate-my-professors",
-  "author": "Max Isom <hi@maxisom.me>",
+  "repository": "git@github.com:ChromeSkullex/rate-my-professors",
+  "author": "Max Isom <hi@maxisom.me>, Sazhelle Gutierrez-Moulton <szlgmoulton@gmail.com>",
   "license": "MIT",
   "files": [
     "dist/src",
