--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chromeskullex/rate-my-professors",
+  "name": "@RitchieFu/rate-my-professors",
   "keywords": [
     "🧑‍🏫",
     "ratemyprofessors",
@@ -13,8 +13,8 @@
   "description": "a basic wrapper for Rate My Professors's GraphQL API with reviews",
   "main": "dist/src/index.js",
   "types": "dts/src/index.d.ts",
-  "repository": "git@github.com:ChromeSkullex/rate-my-professors",
-  "author": "Max Isom <hi@maxisom.me>, Sazhelle Gutierrez-Moulton <szlgmoulton@gmail.com>",
+  "repository": "git@github.com:RitchieFu/rate-my-professors",
+  "author": "Max Isom <hi@maxisom.me>, Sazhelle Gutierrez-Moulton <szlgmoulton@gmail.com>, Ritchie Fu",
   "license": "MIT",
   "files": [
     "dist/src",
